[project]
name = "fillspillmerge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pybind11>=3.0.2",
]

[dependency-groups]
ci = [
    "pytest>=9.0.2",
]
dev = [
    "dask>=2026.1.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "rioxarray>=0.21.0",
    "xarray-sweep>=0.1.6",
]
